# ifdnfc-nci

./: .gitignore  CMakeLists.txt  README.md  flake.nix  reader.conf
src/: CMakeLists.txt  atr.c  atr.h  ifdnfc-nci.c
